fix image align

--- a/docs/_sass/base.scss
+++ b/docs/_sass/base.scss
@@ -141,9 +141,10 @@ a {
 
 /* Posts */
 
-img {
+p img {
   width: 50%;
-  text-align: center;
+  display: block;
+  margin: auto;
 }
 
 /* Footer */
